js/js.translator/testData/incremental/invalidation/singleMainFunction/main/l1.1.kt
package A

var mainInA = false

fun main() {
    mainInA = true
}
